fix(reboot): let form elements inherit letter-spacing too

--- a/scss/_reboot.scss
+++ b/scss/_reboot.scss
@@ -387,6 +387,7 @@ textarea {
   font-family: inherit;
   @include font-size(inherit);
   line-height: inherit;
+  letter-spacing: inherit;
 }
 
 button,
